gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for gschem

Most recent changes (version wise) are at the top of this file
All the changes are usually noted in this file when they are checked
into the cvs repository.

2000-01-03  Ales Hvezda  <ahvezda@geda.seul.org>
        
        * src/i_callbacks.c: Changed misc-misc callback to test out the
          o_attrib_return_attribs functions

2000-01-02  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/i_callbacks.c: Minor bug fix deal with rotate/mirror modes
	  not updating the status message on the bottom of the screen	

1999-12-27  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/x_menus.c: Added File/Revert Page to make Magnus happy. :-)

	* src/i_callbacks.c: Added code to implement above

	* lib/system-gschemrc: Added hotkey for revert page.

	* src/g_key.c and src/g_register: Changes to support above.

	* lib/system-gschemrc: Changed file script hotkey from "fr" to "ft"
	  "fr" is now used for revert.

	* src/x_menus.c: Added Zoom limits/Zoom box to the right mouse button
	  popup menu to make Mangus happy. :-)

1999-11-19  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/x_menus.c: Added Zoom in and Zoom out to the third mouse
	  button popup menu

	* src/parsecmd.c: Add -h (help) flag

1999-11-11  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/x_fileselect.c: Fixed the dialog box title for the SAVEAS_CLOSE
	  case

	* src/o_net.c: Fixed a nasty bug when enabling net consolidation 
	  and drawing non-ortho nets (non-ortho nets would disappear, since
	  gschem thought it could consolidate them; it cannot not)

	* src/x_menu.c: Change Edit/Stretch to read Edit/Stretch Mode

1999-11-06  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/x_fileselect.c: Fixed all calls to s_clib_getfiles with the
	  right number of arguments (new filter argument)

1999-11-06  Ales Hvezda  <ahvezda@geda.seul.org>
