@@ -8,10 +8,17 @@ ChangeLog for libgeda
 
 Most recent changes are at the top of this file
 
+2000-01-04  Ales Hvezda  <ahvezda@geda.seul.org>
+
+	* src/o_attrib.c: Fixed o_attrib_return_attribs so that it returns
+	  an array of objects instead of an array of strings
+
 2000-01-03  Ales Hvezda  <ahvezda@geda.seul.org>
 
-	* src/o_attrib.c: Added o_attrib_find_attribs which returns an 
+	* src/o_attrib.c: Added o_attrib_return_attribs which returns an 
 	  array of all attached attributes given an object 
+
+	* HACKING: Added file which describes file prefix (for now)
 
 1999-11-09  Ales Hvezda  <ahvezda@geda.seul.org>
 
