@@ -9,6 +9,11 @@ Most recent changes (version wise) are at the top of this file
 All the changes are usually noted in this file when they are checked
 into the cvs repository.
 
+2000-01-04  Ales Hvezda  <ahvezda@geda.seul.org>
+
+	* src/i_callbacks.c: Updated misc-misc callback to use the new
+	  o_attrib_return_attribs which now returns an object array
+
 2000-01-03  Ales Hvezda  <ahvezda@geda.seul.org>
         
         * src/i_callbacks.c: Changed misc-misc callback to test out the
